metadata/objects/graxsgisampleindex__x.object
<CustomObject>
    <description>graxsgisampleindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxsgisampleindex</externalName>
    <fields>
        <fullName>Audit_Status__c</fullName>
        <description>Audit_Status</description>
        <externalDeveloperName>Audit_Status</externalDeveloperName>
        <label>Audit_Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <externalDeveloperName>County</externalDeveloperName>
        <label>County</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <description>DBA</description>
        <externalDeveloperName>DBA</externalDeveloperName>
        <label>DBA</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date</description>
        <externalDeveloperName>Date</externalDeveloperName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funds_In__c</fullName>
        <description>Funds_In</description>
        <externalDeveloperName>Funds_In</externalDeveloperName>
        <label>Funds_In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IGB_Tag__c</fullName>
        <description>IGB_Tag</description>
        <externalDeveloperName>IGB_Tag</externalDeveloperName>
        <label>IGB_Tag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>License_Type</description>
        <externalDeveloperName>License_Type</externalDeveloperName>
        <label>License_Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <description>License</description>
        <externalDeveloperName>License</externalDeveloperName>
        <label>License</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <description>Live_Date</description>
        <externalDeveloperName>Live_Date</externalDeveloperName>
        <label>Live_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <description>Manufacturer</description>
        <externalDeveloperName>Manufacturer</externalDeveloperName>
        <label>Manufacturer</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model</description>
        <externalDeveloperName>Model</externalDeveloperName>
        <label>Model</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Live_Date__c</fullName>
        <description>Original_Live_Date</description>
        <externalDeveloperName>Original_Live_Date</externalDeveloperName>
        <label>Original_Live_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RO__c</fullName>
        <description>RO</description>
        <externalDeveloperName>RO</externalDeveloperName>
        <label>RO</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAS__c</fullName>
        <description>SAS</description>
        <externalDeveloperName>SAS</externalDeveloperName>
        <label>SAS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <description>Salesforce_ID</description>
        <externalDeveloperName>Salesforce_ID</externalDeveloperName>
        <label>Salesforce_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial_Number</description>
        <externalDeveloperName>Serial_Number</externalDeveloperName>
        <label>Serial_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <description>SystemModstamp</description>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>UniqueId</description>
        <externalDeveloperName>UniqueId</externalDeveloperName>
        <label>UniqueId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrade_Date__c</fullName>
        <description>Upgrade_Date</description>
        <externalDeveloperName>Upgrade_Date</externalDeveloperName>
        <label>Upgrade_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip</description>
        <externalDeveloperName>Zip</externalDeveloperName>
        <label>Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax_sgisample_xf__c</fullName>
        <description>grax_sgisample_xf</description>
        <externalDeveloperName>grax_sgisample_xf</externalDeveloperName>
        <label>grax_sgisample_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>graxsgisampleindex</label>
    <pluralLabel>graxsgisampleindex</pluralLabel>
</CustomObject>